8.2/readme.md
# Домашнее задание к занятию «Программирование на языке ST. Часть 1»

### Цель задания

Получить опыт создания программ на языке SCL, аналоге языка ST от компании Siemens, в программном проекте в TIA Portal 13.

В результате выполнения этого задания вы сможете:

- вносить изменения в программный код на языке SCL в соответствии с заданием: 
 - создавать новые экземпляры функциональных блоков и производить привязку их входов и выходов;
 - изменять функциональный блок, добавляя в него новые параметры.

- получить опыт работы с системой TIA Portal в части программирования на языке SCL и программой PLCSIM в части разработки, загрузки и отладки программ.

------

### Чеклист готовности к домашнему заданию

1. Зарегистрируйтесь на [портале Siemens](https://mall.industry.siemens.com/goos/WelcomePage.aspx?regionUrl=/ru&language=ru) и получите персональный логин и пароль для входа в систему. Процесс регистрации описан в [инструкции](https://u.netology.ru/backend/uploads/lms/content_assets/file/338/%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8%D1%8F_%D0%BF%D0%BE_%D1%80%D0%B5%D0%B3%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%86%D0%B8%D0%B8_%D0%BD%D0%B0_%D0%BF%D0%BE%D1%80%D1%82%D0%B0%D0%BB%D0%B5_Siemens.pptx).
2. Загрузите с [официального сатйа Siemens](https://support.industry.siemens.com/cs/document/78793685/simatic-step-7-(tia-portal)-v13-trial-download?dti=0&lc=en-DE) и установите программное обеспечение для создания проекта PLC Siemens, входящее в состав пакета TIA Portal.
3. Скачайте [архив программного проекта Netology_Project_ST_1](https://u.netology.ru/backend/uploads/lms/content_assets/file/1517/Netology_Project_ST_1.zap13) и распакуйте его, используя функцию Retrieve среды программирования TIA Portal.

 
<details>
  <summary> Подсказка по установке ПО (доступна по клику).</summary>
  
  
1. Скачайте все файлы по [ссылке](https://support.industry.siemens.com/cs/document/109745155/simatic-step-7-including-plcsim-v13-sp2-trial-download?dti=0&lc=en-DE) в две отдельные папки:

  - STEP 7 Professional V13 SP2 (DVD 1, DVD 2, SHA-256 checksum).
  
  ![image](https://github.com/netology-code/phd-homeworks/blob/main/6.6/Step7_1.png)
  
  - SIMATIC STEP 7 PLCSIM V13 SP2 for STEP 7 Basic and STEP 7 Professional (включая SHA-256 checksum).
  
  ![image](https://github.com/netology-code/phd-homeworks/blob/main/6.6/Step7_2.png)

2. Запустите установочный файл SIMATIC_STEP_7_Professional_V13_SP2_Upd4.exe, пройдите стандартную процедуру установки.

3. Запустите установочный файл SIMATIC_S7_PLCSIM_V13_SP2.exe, пройдите стандартную процедуру установки.

    **Подсказка по распаковке архиватором WinRAR:**

Если скачанный дистрибутив TIA Portal содержит некоторые файлы с расширением 001, это вызовет проблему при распаковке данных.

Это происходит, потому что некоторые версии архиватора WinRAR, установленные на ПК, ассоциируют файлы с именем 001, как файлы с расширением .rar.

Для решения проблемы можно убрать ассоциацию:

1. Найдите архиватор WinRAR, имеющий окончание 001.
2. Откройте его двойным кликом, далее выбирайте Установка ⇒ Интеграция.
3. В окне слева будет перечень форматов, которые по умолчанию ассоциируются с WinRAR.
4. Уберите галочку с формата 001, нажмите ОК и перезагрузите ПК.

Скрин с действиями дан ниже:
 ![image](https://github.com/netology-code/scada-4-homeworks/blob/scada-7/WinRAR.png)

-----
  
</details>
  
**Обратите внимание.** Устанавливается демо-версия программы. Её функционал будет ограничен через 21 день после установки. Рекомендуем установку софта на виртуальной машине. Как это сделать, описано в [инструкции](https://u.netology.ru/backend/uploads/lms/content_assets/file/339/%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8%D1%8F_%D0%BF%D0%BE_%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D1%8E_%D0%B2%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B9_%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D1%8B_%D0%B8_%D0%BE%D1%82%D0%BA%D0%B0%D1%82%D1%83.pptx).


------

### Инструкция к заданию

1. Скачайте [«Шаблон для домашнего задания»](https://u.netology.ru/backend/uploads/lms/content_assets/file/1519/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD_%D0%B4%D0%BB%D1%8F_%D0%B4%D0%BE%D0%BC%D0%B0%D1%88%D0%BD%D0%B5%D0%B3%D0%BE_%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F__%D0%9F%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BD%D0%B0_%D1%8F%D0%B7%D1%8B%D0%BA%D0%B5_ST_%D0%A7%D0%B0%D1%81%D1%82%D1%8C_1__-_%D0%A4%D0%B0%D0%BC%D0%B8%D0%BB%D0%B8%D1%8F_%D0%98%D0%BC%D1%8F__%D0%A1%D0%94%D0%95%D0%9B%D0%90%D0%99%D0%A2%D0%95_%D0%9A%D0%9E%D0%9F%D0%98%D0%AE_.docx) на своё устройство.
2. Откройте скачанный файл на личном диске в Google.
3. В названии файла введите корректное название лекции и ваши фамилию и имя.
4. Зайдите в «Настройки доступа» и выберите доступ «Просматривать могут все в интернете, у кого есть ссылка». Инструкция «Как предоставить доступ к файлам и папкам на Google Диске» [по ссылке](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop).
5. Скопируйте текст задания в свой документ.
6. Выполните задание, запишите ответы и приложите необходимые скриншоты в свой Google-документ.
7. Для проверки домашнего задания отправьте ссылку на ваш Google-документ в личном кабинете.
8. Подробнее о работе с Google-документами и загрузке решения на проверку можно найти в [«Руководстве по работе с материалами для обучения»](https://l.netology.ru/instruktsiya-po-materialami-dlya-obucheniya)
9. Вопросы по учебным материалам курса, заданию и логике решений вы можете задать:
- в разделе «Вопросы и ответы» (в комментариях под практическим заданием);
- в комментариях эксперту при отправке решения на проверку или при его доработке.
  
  По организационным и техническим вопросам обращайтесь, пожалуйста, [чат поддержки](https://netology.ru/profile?modal=support&type=new-ticket).

------

### Инструменты и дополнительные материалы для выполнения задания

1. [TIA Portal 13, PLCSIM 13](https://support.industry.siemens.com/cs/document/109745155/simatic-step-7-including-plcsim-v13-sp2-trial-download?dti=0&lc=en-WW).
2. [Архив проекта Netology_Project_ST_1](https://u.netology.ru/backend/uploads/lms/content_assets/file/1517/Netology_Project_ST_1.zap13).
3. [Инструкция по созданию виртуальной машины](https://u.netology.ru/backend/uploads/lms/content_assets/file/339/%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8%D1%8F_%D0%BF%D0%BE_%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D1%8E_%D0%B2%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B9_%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D1%8B_%D0%B8_%D0%BE%D1%82%D0%BA%D0%B0%D1%82%D1%83.pptx).
4. [Шаблон для домашнего задания](https://u.netology.ru/backend/uploads/lms/content_assets/file/1519/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD_%D0%B4%D0%BB%D1%8F_%D0%B4%D0%BE%D0%BC%D0%B0%D1%88%D0%BD%D0%B5%D0%B3%D0%BE_%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F__%D0%9F%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BD%D0%B0_%D1%8F%D0%B7%D1%8B%D0%BA%D0%B5_ST_%D0%A7%D0%B0%D1%81%D1%82%D1%8C_1__-_%D0%A4%D0%B0%D0%BC%D0%B8%D0%BB%D0%B8%D1%8F_%D0%98%D0%BC%D1%8F__%D0%A1%D0%94%D0%95%D0%9B%D0%90%D0%99%D0%A2%D0%95_%D0%9A%D0%9E%D0%9F%D0%98%D0%AE_.docx).

------

### Задание 1

1. В проекте [Netology_Project_ST_1](https://u.netology.ru/backend/uploads/lms/content_assets/file/1517/Netology_Project_ST_1.zap13) проделайте операции:

 - внесите изменения в блок данных DB_ValveEmul: добавьте набор параметров по аналогии с имеющимися для Valve1 (названия этих параметров должны начинаться с Valve2);
 - внесите изменения в организационный блок ValveEmul_OB: добавьте второй экземпляр FC_ValveEmul, привяжите его входы/выходы к вновь созданным полям из DB_ValveEmul;
 - внесите изменения в организационный блок OB1 (Main): добавьте второй экземпляр FB ValveCtrl, привяжите его входы/выходы к вновь созданным полям из DB_ValveEmul.

2. Произведите компиляцию проекта и его загрузку в PLCSIM.
3. В OB1 включите режим мониторинга и убедитесть в корректности работы вновь добавленного экземпляра FB.
4. Сделайте скриншот одновременной работы двух экземпляров FB и приложите его к заданию.

------

### Задание 2

1. Измените функциональный блок FB ValveCtrl следующим образом: добавьте вход MonTime (тип: Time), чтобы задавать время задержки на формирование ошибки с его помощью.
2. Внесите соответствующие изменения в блок данных DB_ValveEmul, добавив поля Valve1_Time, Valve2_Time (тип: Time).
3. Произведите необходимые привязки во всех экземплярах этого FB, вызываемого в OB1.
4. Произведите компиляцию проекта и его загрузку в PLCSIM.
5. В OB1 включите режим мониторинга и убедитесь в корректности работы всех экземпляров FB.
6. Сделайте скриншоты программного кода FB с использованием вновь добавленного входа и одновременной работы двух экземпляров FB с вновь добавленным параметром и приложите его к заданию.

------

### Задание 3* (необязательное)

1. Внесите в программный код организационного блока OB1 изменения: добавьте возможность подсчёта времени, в течение которого оба клапана — Valve1, Valve2 — находятся в положении «Открыт».
2. В блок данных DB_ValveEmul добавьте поле TooMuchOpen (тип: Bool). В это поле должно записываться значение 1 (TRUE), если время пребывания обоих клапанов в положении «Открыт» превысило заданное в параметре OpenTime (тип: Time). Параметр OpenTime также должен быть добавлен в качестве поля в DB_ValveEmul.
3. Сделайте скриншот программного кода, добавленного в OB1, и приложите его к заданию. 

------

### Правила приёма работы

1. Отправлена ссылка на документ (Google Doc) с выполненным заданием в личном кабинете.
2. Документ размещён на личном Google Диске.
3. К документу настроены права доступа «Просматривать могут все в интернете, у кого есть ссылка».

------

### Критерии оценки

1. Задание 1 считается выполненным, если на приложенном скриншоте показана корректная работа двух экземпляров FB.
2. Задание 2 считается выполненным, если на приложенном скриншоте показана корректная работа двух экземпляров FB с вновь добавленным параметром.
